Print Package : COMPLETE informative message
It is a simple printed dialog which informs the user/developer about the build that was just created.
It also produces the necessary .md5sum file.

FULL CREDITS for the idea, creation and implementation to @dark-falcon, our terminal beautifier
My edis:
* Remove ROM name hardcoding
* Changed some lines

Conflicts:
	core/Makefile

--- a/core/Makefile
+++ b/core/Makefile
@@ -1591,6 +1591,13 @@ otapackage: $(INTERNAL_OTA_PACKAGE_TARGET)
 bacon: otapackage
 	$(hide) ln -f $(INTERNAL_OTA_PACKAGE_TARGET) $(CUSTOM_TARGET_PACKAGE)
 
+	$(hide) $(MD5SUM) $(CUSTOM_TARGET_PACKAGE) > $(CUSTOM_TARGET_PACKAGE).md5sum
+	@echo -e ${CL_CYN}"=============== $$(echo $(TARGET_PRODUCT) | sed 's/\([a-z]\)\([a-zA-Z0-9]*\)/\u\1\2/g' | cut -d'_' -f1) OTA package: COMPLETE ==============="${CL_RST}
+	@echo -e ${CL_CYN}"ZIP: "${CL_CYN} $$(basename $(CUSTOM_TARGET_PACKAGE))${CL_RST}
+	@echo -e ${CL_CYN}"MD5: "${CL_CYN}" `cat $(CUSTOM_TARGET_PACKAGE).md5sum | cut -d ' ' -f 1`"${CL_RST}
+	@echo -e ${CL_CYN}"Size:"${CL_CYN}" `ls -la --si $(CUSTOM_TARGET_PACKAGE) | cut -d ' ' -f 5`"${CL_RST}
+	@echo -e ${CL_CYN}"============================================================="${CL_RST}
+
 endif    # recovery_fstab is defined
 endif    # TARGET_NO_KERNEL != true
 endif    # TARGET_DEVICE != generic*
